// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Number should render 1`] = `
<div>
  <label
    class="input default left"
  >
    <input
      type="number"
      value=""
    />
  </label>
</div>
`;

exports[`Number should render when disabled 1`] = `
<div>
  <label
    class="input default left disabled"
  >
    <input
      disabled=""
      type="number"
      value="8"
    />
  </label>
</div>
`;
